--- a/good_luck.ipynb
+++ b/good_luck.ipynb
@@ -11992,7 +11992,7 @@
    "source": [
     "1. Train on the full dataset: Use every available example rather than a small subset to improve generalization and prevent overfitting.\n",
     "2. Swap in CLIP or BLIP vision encoders: Leverage CLIP (e.g. ViT-B/16 pre‐aligned with text) or BLIP (vision–language pretrained) for stronger image–code grounding.\n",
-    "3. Fine-tune CAD-specific VLMs: Experiment with models trained on CAD syntax and imagery, such as the [Kamel773/CAD\\_Code\\_Generation](https://github.com/Kamel773/CAD_Code_Generation) repo.\n",
+    "3. Fine-tune CAD-specific VLMs: Experiment with models trained on CAD syntax and imagery, such as the [CAD-Coder](https://github.com/anniedoris/CAD-Coder) repo.\n",
     "4. Use code-fence prompt templates: Prepend “\\`\\`\\`python” fences or minimal function stubs to enforce proper syntax, indentation, and imports.\n",
     "5. Adopt a CAD-aware tokenizer: Customize BPE merges or train a SentencePiece model on Python/CAD code to better handle operators, units, and identifiers.\n",
     "\n"
